# LANfactory

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  MLFLOW_CONFIGURATION.md  README.md  lan_pipeline_env.yml  mkdocs.yml  pyproject.toml
.claude/rules/: uv.md
.github/workflows/: build_wheels.yml  run_tests.yml
docs/: exporting_bayesflow_models.md  exporting_sbi_models.md  index.md  using_huggingface.md  using_mlflow.md
docs/api/: config.md  hf.md  onnx.md  trainers.md  utils.md
docs/basic_tutorial/: basic_tutorial.ipynb  basic_tutorial_cpn_torch.ipynb  basic_tutorial_jax.ipynb  basic_tutorial_lan_jax.ipynb  basic_tutorial_lan_torch.ipynb  basic_tutorial_opn_torch.ipynb
docs/basic_tutorial/data/: fileid_lan_runid_data_details.pickle  fileid_lan_runid_torch_model.onnx  fileid_lan_runid_torch_training_history.csv  fileid_lan_runid_train_state_dict_torch.pt
docs/overrides/: main.html
docs/tutorials/: exporting_bayesflow_to_onnx.ipynb  exporting_sbi_to_onnx.ipynb
lanfactory/onnx/: transform_onnx.py
lanfactory/trainers/: jax_mlp.py  torch_mlp.py
lanfactory/utils/: __init__.py  util_funs.py
notebooks/: basic_tutorial.ipynb  basic_tutorial.md  exporting_bayesflow_to_onnx.py  exporting_sbi_to_onnx.py  network_inspectors_tutorial.ipynb  test_basic_tutorial_jax.ipynb
notebooks/test_data/jax_models/lan/: jax_lan_race_4__data_details.pickle  jax_lan_race_4__jax_training_history.csv  jax_lan_race_4__train_config.pickle  jax_lan_race_4__train_state.jax
notebooks/test_notebooks/: load_jax_lan_cpn.ipynb  test_jax_network.ipynb  test_jax_network_cpn.ipynb
src/lanfactory/: __init__.py  network_inspectors.py
src/lanfactory/cli/: config_network_training_lan.yaml  download_hf.py  jax_train.py  torch_train.py  upload_hf.py  utils.py
src/lanfactory/config/: __init__.py  network_configs.py
src/lanfactory/hf/: __init__.py  download.py  model_card.py  upload.py
src/lanfactory/network_inspectors/: __init__.py  api.py  compute.py  config.py  loaders.py  plotting.py
src/lanfactory/onnx/: __init__.py  bayesflow.py  sbi.py  transform_onnx.py
src/lanfactory/trainers/: __init__.py  jax_mlp.py  torch_mlp.py
src/lanfactory/utils/: __init__.py  mlflow_utils.py  util_funs.py
test/: test_basic_tutorial.py
tests/: _onnx_utils.py  conftest.py  constants.py  test_bayesflow_hssm_integration.py  test_bayesflow_nle_export.py  test_bayesflow_nre_export.py  test_cli_utils.py  test_end_to_end.py  test_end_to_end_jax.py  test_end_to_end_pytorch.py  test_end_to_end_torch.py  test_fixtures.py  test_jax_mlp.py  test_mlflow_integration.py  test_network_inspectors_api.py  test_network_inspectors_plotting.py  test_notebooks.py  test_sbi_embeddings.py  test_sbi_hssm_integration.py  test_sbi_nle_export.py  test_sbi_nre_export.py  test_sbi_spike_maf_roundtrip.py  test_sbi_spike_mlp_roundtrip.py  test_torch_mlp.py  test_transform_onnx.py  test_util_funs.py  utils.py
tests/cli/: config_network_training_lan.yaml  test_cli_entry_points.py  test_hf_cli.py  test_jaxtrain_entry_point.py
tests/hf/: __init__.py  test_download.py  test_model_card.py  test_upload.py
tests/test_data/jax_models/cpn/: jax_cpn_race_no_z_2__data_details.pickle  jax_cpn_race_no_z_2__jax_training_history.csv  jax_cpn_race_no_z_2__train_state.jax
tests/test_data/jax_models/opn/: jax_cpn_full_ddm__data_details.pickle  (+3 more)
(+16 files in other folders)
