[build-system]
requires = ["setuptools", "wheel"]

[project.urls]
"Homepage" = "https://github.com/AlexanderFengler/LANFactory"
"Bug Tracker" = "https://github.com/AlexanderFengler/LANFactory/issues"

[project]
name = "lanfactory"
version = "0.4.9"
authors = [{ name = "Alexander Fenger", email = "alexander_fengler@brown.edu" }]
description = "Package with convenience functions to train LANs"
readme = "README.md"
requires-python = ">3.10, <3.13"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ssm-simulators == 0.8.3",
    "scipy >= 1.15.2",
    "pandas >= 2.2.3",
    "torch >= 2.7.0",
    "flax >= 0.10.6",
    "tqdm >= 4.67.1",
    "frozendict >= 2.4.6",
    "onnx >= 1.17.0",
    "matplotlib >= 3.10.1",
]
keywords = [
    "LANs",
    "generative models",
    "cognitive science",
    "neuroscience",
    "sbi",
]

[dependency-groups]
dev = ["pytest-cov>=6.1.1", "pytest-timer>=1.0.0", "ruff>=0.11.1"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO" # set minimum log level for console output
testpaths = ["tests"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--exitfirst",
    "--timer-top-n=25",
]

[tool.ruff]
# Specify the directories to check
src = ["lanfactory", "src"]
exclude = [
    "notebooks/*",
    "docs/*",  # Exclude the entire docs folder
    "docs/basic_tutorial/basic_tutorial.ipynb"
]

# Add any additional configuration options for ruff
line-length = 120
